@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.238 2002-09-27 20:58:18 castaglia Exp $
+$Id: NEWS,v 1.239 2002-09-30 15:56:42 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -31,6 +31,7 @@ CVS
 - Bug 1732 - No checking for NULL at inet_ascii and pr_fnmatch
 - Bug 1687 - Add contrib module for RADIUS authentication, accounting
 - Bug 1572 - Need to use pam_end() to close session on Solaris 8
+- Bug 1475 - Minor changes to SITE command handling
 
 1.2.6 - Released 2002-09-04
 ---------------------------------
